# RESOLVE

./: README.md
RESOLVE/: abstracters.py  attention.py  autoregressive_abstractor.py  autoregressive_abstractor_old.py  multi_attention_decoder.py  multi_head_HDC.py  new_autoregressive_abstractor.py  seq2seq_abstracter_models.py  transformer_modules.py  utils.py
RESOLVE/experiments/MNIST_math/: mnist.py
RESOLVE/experiments/Math/: attentional_lstm.sh  eval_utils.py  hd_former.sh  models.py  relational_abstractor_small.sh  train_model.py  transformer_small.sh
RESOLVE/experiments/object_argsort_autoregressive/: RESOLVE_5.sh  evaluate_argsort_model_learning_curves_1.py  generate.py  rel-abstracter_5.sh  transformer_5.sh
RESOLVE/experiments/pairwise_order/: pairwise_ordering.py  plot.py
RESOLVE/experiments/set/: commons.py  partially_purely_relational_set_classification.ipynb
overhead_assessment/: CMakeLists.txt  hd_attention.cpp  parse.py  self_attention.cpp
